--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <input type="password" class="form-control campos" name="senha" required>
           </div>
           <div class="form-group">
-            <button type="submit" class="btn btn-danger">SEJA HACKEADO</button>
+            <button type="submit" class="btn btn-danger">toop</button>
           </div>
           <div class="form-group">
            <label for="comment">Deseja deixar algum comentário? (não necessário)</label>
